Implemented clean up and enums_controller.ts
