# src/docs/swagger_output.json
@@ -1264,6 +1264,41 @@
         ]
       }
     },
+    "/api/v1/enum/enums": {
+      "get": {
+        "summary": "/api/v1/enum/enums",
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "number",
+                  "example": 200
+                },
+                "message": {
+                  "type": "string",
+                  "example": "All enums retrieved successfully."
+                },
+                "enums": {
+                  "type": "object",
+                  "properties": {}
+                }
+              }
+            }
+          }
+        },
+        "tags": [],
+        "produces": [
+          "application/json"
+        ]
+      }
+    },
     "/": {
       "get": {
         "summary": "/",
