# src/routes/enum.ts
@@ -1,0 +1,9 @@
+import {Router} from "express";
+import {getEnums} from "@src/controller/enums_controller";
+
+
+const router = Router();
+
+router.get('/enums', getEnums);
+
+export default router;
